@@ -23,6 +23,7 @@ Java是由Sun Microsystems公司（简称Sun公司）于1995年5月推出的Java
 - 2002-2-13，J2SE 1.4（JDK 1.4）发布。
 - 2003-11-11，J2EE 1.4发布。
 - 2004-9-30，J2SE 5.0（JDK 1.5）发布，修改版本号命名方式，1.x保留为内部命名方式。
+- 2006-11-13，Sun在GPL许可证下开源Java。
 - 2006-12-11，Java SE 6发布，使用Java SE替换J2SE，版本号去掉“.0”。
 - 2006-5-11，Java EE 5发布。
 - 2009-4-20，Oracle以74亿美元收购Sun。
@@ -35,31 +36,141 @@ Java是由Sun Microsystems公司（简称Sun公司）于1995年5月推出的Java
 - 2020-11-22，Jakarta EE9发布。
 - 2021-9-17，Java SE 17发布，从此免费提供，LTS（2029-9）。
 
-## JDK 1.0
-## JDK 1.1
-## JDK 1.2
-...
+## Java/JDK 新特性
+### Java SE 11
+- String API isBlank、strip、stripTrailing、stripLeading、repeat、lines.count
+- Optinal API isEmpty...
+- 局部变量类型推断加强 var上可以加注解
+- HttpClient
+- 垃圾回收ZGC
 
+### Java SE 10
+- 局部变量类型推断
+- 不可变集合的改进
+- 并行全垃圾回收器 G1
+- 线程本地握手
+- Optional新增orElseThrow()方法
+- 类数据共享
+- Unicode 语言标签扩展
+- 根证书
 
-## jdk9
-1. 模块化
-2. jShell
-3. 接口可定义private方法 （只能在接口内部调用）
-4. try with resource 优化
-5. String, StringBuilder, StringBuffer 中的value由char[]改为byte[]
-6. List、Set、Map 添加of方法创建只读集合
-7. InputStream流加强
-8. StreamAPI takeWhile、dropWhile、ofNullable、iterate
-9. Optional增加stream()
-10. 垃圾回收机制
+### Java SE 9
+- 模块化
+- jShell
+- 接口可定义private方法 （只能在接口内部调用）
+- try with resource 优化
+- String, StringBuilder, StringBuffer 中的value由char[]改为byte[]
+- List、Set、Map 添加of方法创建只读集合
+- InputStream流加强
+- StreamAPI takeWhile、dropWhile、ofNullable、iterate
+- Optional增加stream()
+- 垃圾回收机制
 
-## jdk10
-1. 局部变量类型推断 var
-2. 只读集合 copyOf
+### Java SE 8
+#### 语言
+- lambda 表达式和函数式接口
+- 接口的默认方法和静态方法
+- 方法引用
+- 重复注释
+- 更好的类型推断
+- 注解的扩展 （扩展了注解可以使用的范围，包括：局部变量，泛型，超类，接口实现，方法的exception声明等）
 
-## jdk11
-1. String API isBlank、strip、stripTrailing、stripLeading、repeat、lines.count
-2. Optinal API isEmpty...
-3. 局部变量类型推断加强 var上可以加注解
-4. HttpClient
-5. 垃圾回收ZGC
+#### 编译器
+- 参数名字
+
+#### JDK
+- Optional
+- Stream
+- 时间日期API
+- Nashorn javascript引擎
+- Base64
+- 并行数组 （增加了支持并行的数组处理）
+- 并发 （新增StampedLock、DoubleAccumulator、DoubleAdder、LongAccumulator、LongAdder等）
+
+#### 工具
+- Nashorn引擎 jjs
+- 类依赖分析工具 jdeps
+
+#### JVM
+- JVM内存永久区被metaspace替换，JVM参数 -XX:PermSize 和 -XX:MaxPermSize 被 -XX:MetaSpaceSize 和 -XX:MaxMetaSpaceSize 代替。
+
+### JDK 1.7
+- switch 支持String字符串类型
+- try-with-resources，资源自动关闭
+- 整数类型能够用二进制来表示
+- 数字常量支持下划线
+- 泛型实例化类型自动推断,即”<>”
+- catch捕获多个异常类型，用（|）分隔开
+- 全新的NIO2.0 API
+- Fork/join 并行执行任务的框架
+
+### JDK 1.6
+- java.awt新增Desktop类和SystemTray类
+- 使用JAXB2来实现对象与XML之间的映射
+- 轻量级 Http Server API
+- 插入式注解处理API(lombok使用该特性来实现的)
+- STAX，处理XML文档的API
+- Compiler API
+- 对脚本语言的支持（ruby, groovy, javascript）
+
+### JDK 1.5
+- 自动装箱拆箱
+- 泛型
+- 元数据
+- Introspector 内省
+- 枚举
+- 静态引入
+- 可变长参数
+- foreach
+- JMM
+- concurrent
+
+### JDK 1.4
+- XML解析器
+- Java打印服务
+- Logging API（日志功能）
+- Java Web Start
+- JDBC 3.0 API（jdbc高级)
+- 断言
+- Preferences API
+- 链式异常处理
+- 支持IPV6
+- 支持正则表达式
+- 引入Imgae I/O API （图片流);
+- NIO（高级流）
+- XSLT转换器
+
+### JDK 1.3
+- 数学运算
+- Timer API
+- Java Sound API
+- CORBA IIOP实现RMI的通信协议
+- Java 2D
+- JAR文件索引
+
+### JDK 1.2
+- J2SE/J2EE/J2ME
+- EJB
+- Java IDL（平台对象请求代理体系结构）
+- 集合框架
+- JIT(Just In Time)编译器
+- 数字签名
+- JFC(Java Foundation Classes), 包括Swing1.0, 拖放和Java2D类库
+- Java Plug-In（运行插件)
+- JDBC中引入可滚动结果集,BLOB,CLOB,批量更新和用户自定义类型
+- Applet中添加声音支持
+- 字符串常量做内存映射
+- 控制授权/访问系统资源的策略工具
+
+### JDK 1.1
+- JAR
+- JDBC
+- JavaBeans
+- RMI
+- Inner Class
+- Reflection
+
+### JDK 1.0
+- Classic VM（虚拟机）
+- Applet（java小应用程序）
+- AWT（java图形设计）
